--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     
-    <section class="about">
-      <nav style="background-color: blue; color: #fff;">
+    <section class="contactMenu">
+      <nav>
           <a href="Index.html"><img src="logo_mikalimbua.png"</a>
           <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()"></i>
@@ -25,6 +25,8 @@
           </div>
           <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
+    <section class="about">
+      <div class="about2">
       <h2>Tentang kami</h2>
       <iframe width="500px" height="400px" src="https://www.youtube-nocookie.com/embed/75Vz1OuzoDE?feature=shared?controls=0&amp;autoplay=1&amp;rel=0" title="YouTube Player Created By Video Embed Code Generator" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        <p>
@@ -36,7 +38,7 @@
        <p>
          MI memiliki beberapa keunggulan, antara lain:
          <ul>
-           <li>Kurikulum berbasis agama yang menggabungkan IPTEK dengan basis agama</li>
+           <li>Kurikulum berbasis agama yang menggabungkan pengetahuan umum dengan basis agama</li>
            <li>Materi Pendidikan Agama Islam yang lebih panjang dan lebih dalam</li>
            <li>Praktek keagamaan untuk membantu anak-anak memahami teori</li>
            <li>Membentuk siswa yang beriman dan bertaqwa kepada Allah SWT</li>
@@ -80,6 +82,7 @@
            <td>Bontongan</td>
          </tr>
        </table>
+       </div>
     </section>
     <section class="footer">
       <img src="logo_mikalimbua.png">
@@ -98,6 +101,5 @@
         }
     </script>
 
-    <script src="script.js"></script>
 </body>
 </html>
