--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
     </section>
     <section class="about">
+      <div class="about2">
       <h2>Tentang kami</h2>
       <iframe width="500px" height="400px" src="https://www.youtube-nocookie.com/embed/75Vz1OuzoDE?feature=shared?controls=0&amp;autoplay=1&amp;rel=0" title="YouTube Player Created By Video Embed Code Generator" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        <p>
@@ -41,7 +42,7 @@
        <p>
          MI memiliki beberapa keunggulan, antara lain:
          <ul>
-           <li>Kurikulum berbasis agama yang menggabungkan IPTEK dengan basis agama</li>
+           <li>Kurikulum berbasis agama yang menggabungkan pengetahuan umum dengan basis agama</li>
            <li>Materi Pendidikan Agama Islam yang lebih panjang dan lebih dalam</li>
            <li>Praktek keagamaan untuk membantu anak-anak memahami teori</li>
            <li>Membentuk siswa yang beriman dan bertaqwa kepada Allah SWT</li>
@@ -85,6 +86,7 @@
            <td>Bontongan</td>
          </tr>
        </table>
+       </div>
     </section>
     <section class="contact">
       <h2>Kontak</h2>
